--- a/css/style.css
+++ b/css/style.css
@@ -8,3 +8,13 @@
 .info-film {
     margin: 25px;
 }
+
+.bottom-page {
+    position: absolute;
+    bottom: 0;
+    right: 0;
+}
+
+img {
+    width: 25px;
+}
