--- a/css/style.css
+++ b/css/style.css
@@ -93,7 +93,7 @@ header {
 }
 
 .info-film-serietv:hover .contenuto {
-    display: block;
+    opacity: 1;
 }
 
 .copertina {
@@ -103,7 +103,8 @@ header {
 }
 
 .contenuto {
-    display: none;
+    opacity: 0;
+    transition: 0.1s ease-in-out;
     position: absolute;
     top: 1px;
     left: 1px;
@@ -139,7 +140,9 @@ header {
 
 
 
-
+.hidden {
+    display: none;
+}
 /* .bottom-page {
     position: absolute;
     bottom: 0;
